--- a/src/.env.example
+++ b/src/.env.example
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=match-mysql
+DB_HOST=gym-mysql
 DB_PORT=3306
-DB_DATABASE=matching
+DB_DATABASE=gym
 DB_USERNAME=root
 DB_PASSWORD=password
 
