feat: cdコマンドを追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,26 +24,28 @@ jobs:
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
 
+      - run: cd ./src
+
       # Download and cache dependencies
       - restore_cache:
           keys:
             # "composer.lock" can be used if it is committed to the repo
-            - v1-dependencies-{{ checksum "src/composer.lock" }}
+            - v1-dependencies-{{ checksum "composer.lock" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
       - run: composer install -n --prefer-dist
 
       - save_cache:
-          key: v1-dependencies-{{ checksum "src/composer.lock" }}
+          key: v1-dependencies-{{ checksum "composer.lock" }}
           paths:
-            - src/vendor
+            - vendor
       - restore_cache:
           keys:
-            - node-v1-{{ checksum "src/package.json" }}
+            - node-v1-{{ checksum "package.json" }}
             - node-v1-
       - run: yarn install
       - save_cache:
-          key: node-v1-{{ checksum "src/package.json" }}
+          key: node-v1-{{ checksum "package.json" }}
           paths:
-            - src/node_modules
+            - node_modules
