--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ jobs:
               docker load -i ~/caches/images.tar
             fi
           name: docker load
+      - run:
+          command: docker-compose run laravel dockerize -wait tcp://mysql:3306 -timeout 120s
+          name: wait for db
       - run: 
           command: docker-compose run laravel vendor/bin/phpunit
           name: test
