fix: composer installを追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ jobs:
           command: docker-compose up -d --build
           name: docker up
       - run:
+          command: docker-compose run laravel composer install
+          name: composer install
+      - run:
           command: mkdir -p ~/caches
           name: mkdir -p ~/caches
       - run:
@@ -48,9 +51,6 @@ jobs:
               docker load -i ~/caches/images.tar
             fi
           name: docker load
-      - run:
-          command: docker-compose run laravel dockerize -wait tcp://mysql:3306 -timeout 120s
-          name: wait for db
       - run: 
           command: docker-compose run laravel vendor/bin/phpunit
           name: test
