--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,9 @@ jobs:
           command: docker-compose run laravel composer install
           name: composer install
       - run:
+          command: docker-compose run laravel cp ./.env.example ./.env
+          name: create env file
+      - run:
           command: docker-compose run laravel php artisan key:generate
           name: generate key
       - run:
