--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,9 +72,6 @@ jobs:
       - run:
           command: docker-compose run laravel php artisan key:generate
           name: generate key
-      - run:
-          command: docker-compose run laravel php artisan config:cache
-          name: clear cache
       - run: 
           command: docker-compose run laravel vendor/bin/phpunit
           name: phpunit
@@ -112,4 +109,4 @@ workflows:
             - build
       - phpmd:
           requires:
-            - build
+            - phpunit
