--- a/src/composer.json
+++ b/src/composer.json
@@ -22,10 +22,11 @@
         "barryvdh/laravel-debugbar": "^3.3",
         "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpmd/phpmd" : "@stable",
+        "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^8.5"
     },
     "config": {
