--- a/src/composer.json
+++ b/src/composer.json
@@ -28,7 +28,8 @@
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpmd/phpmd": "^2.8",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "suin/php-cs-fixer-rules": "^2.2"
     },
     "config": {
         "optimize-autoloader": true,
@@ -41,8 +42,7 @@
         },
         "hooks": {
             "pre-commit": [
-                "composer check-phpmd",
-                "composer fix-php-cs-fixer"
+                "src/vendor/bin/phpmd src/ text src/phpmd.xml --suffixes php --exclude vendor/*,tests/*"
             ]
         }
     },
@@ -73,11 +73,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "check-phpmd": [
-            "vendor/bin/phpmd ./ text phpmd.xml --suffixes php --exclude vendor/*,tests/*"
-        ],
-        "fix-php-cs-fixer": [
-            "vendor/bin/php-cs-fixer fix ./"
-        ]
+        "check-phpmd": "vendor/bin/phpmd ./ text phpmd.xml --suffixes php --exclude vendor/*,tests/*",
+        "fix-php-cs-fixer": "vendor/bin/php-cs-fixer fix --path-mode=intersection ./"
     }
 }
