--- a/src/composer.json
+++ b/src/composer.json
@@ -44,7 +44,9 @@
                 "echo [pre-commit]phpmd checking...",
                 "src/vendor/bin/phpmd src/ text src/phpmd.xml --suffixes php --exclude vendor/*,tests/*",
                 "echo [pre-commit]php-cs-fixer checking...",
-                "src/vendor/bin/php-cs-fixer fix --config src/.php_cs.dist --path-mode=intersection src/"
+                "src/vendor/bin/php-cs-fixer fix --config src/.php_cs.dist --path-mode=intersection src/",
+                "echo [pre-commit]php-cs-fixer committing...",
+                "git commit -a --amend --no-verify"
             ]
         }
     },
@@ -75,6 +77,8 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+        "post-install-cmd": "vendor/bin/cghooks add",
+        "post-update-cmd": "vendor/bin/cghooks update",
         "check-phpmd": "vendor/bin/phpmd ./ text phpmd.xml --suffixes php --exclude vendor/*,tests/*",
         "fix-php-cs-fixer": "vendor/bin/php-cs-fixer fix --path-mode=intersection ./"
     }
