--- a/src/composer.json
+++ b/src/composer.json
@@ -46,7 +46,7 @@
                 "echo [pre-commit]php-cs-fixer checking...",
                 "src/vendor/bin/php-cs-fixer fix --config src/.php_cs.dist --path-mode=intersection src/",
                 "echo [pre-commit]php-cs-fixer committing...",
-                "git commit -a --amend --no-verify"
+                "git add ."
             ]
         }
     },
