--- a/src/composer.json
+++ b/src/composer.json
@@ -77,7 +77,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "post-install-cmd": "vendor/bin/cghooks add",
+        "post-install-cmd": "vendor/bin/cghooks add --no-lock",
         "post-update-cmd": "vendor/bin/cghooks update",
         "check-phpmd": "vendor/bin/phpmd ./ text phpmd.xml --suffixes php --exclude vendor/*,tests/*",
         "fix-php-cs-fixer": "vendor/bin/php-cs-fixer fix --path-mode=intersection ./"
