--- a/src/composer.json
+++ b/src/composer.json
@@ -23,10 +23,11 @@
         "barryvdh/laravel-ide-helper": "^2.6",
         "brainmaestro/composer-git-hooks": "^2.8",
         "facade/ignition": "^2.0",
-        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsofphp/php-cs-fixer": "3.0.x-dev",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
+        "php-cs-fixer/diff": "^2.0",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^8.5"
     },
