feat: vueの環境構築

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,6 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
+/public/js/app.js
+/public/css/app.css
+/public/mix-manifest.json
 /storage/*.key
 /vendor
 .env
