fix : 参照するファイルの修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
       - checkout
       - run:
           command: |
-            docker build -fphp-fpm/prod.dockerfile .
+            docker build -fphp-fpm/dev.dockerfile .
             docker build -tborderless-gym/app -fphp-fpm/prod.dockerfile .
             docker build -tborderless-gym/nginx -fnginx/Dockerfile .
           name: build images
