--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,11 +107,13 @@ jobs:
     steps:
       - checkout
       - run:
+          command: docker build -fphp-fpm/dev.dockerfile .
+          name: build base images
+      - run:
           command: |
-            docker build -fphp-fpm/dev.dockerfile .
             docker build -tborderless-gym/app -fphp-fpm/prod.dockerfile .
             docker build -tborderless-gym/nginx -fnginx/Dockerfile .
-          name: build images
+          name: build production iamges
 
 workflows:
   version: 2
