--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:latest
 
-ADD prod/src/public /var/www/html/public
+ADD src/public /var/www/html/public
 COPY nginx/default.conf /etc/nginx/conf.d
