--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,8 @@ jobs:
 
   deploy:
     machine: true
+    environment:
+      APP_ECR_URL: ${AWS_ECR_ACCOUNT_URL}/borderless-gym
     steps:
       - checkout
       - run:
@@ -112,6 +114,17 @@ jobs:
             docker build -tborderless-gym/app -fphp-fpm/prod.dockerfile .
             docker build -tborderless-gym/nginx -fnginx/Dockerfile .
           name: build iamges
+      - run:
+        command: |
+          docker tag borderless-gym/app:latest ${APP_ECR_URL}/app:${CIRCLE_SHA1}
+          docker tag borderless-gym/nginx:latest ${APP_ECR_URL}/nginx:${CIRCLE_SHA1}
+        name: set image tag
+      - aws-ecr/push-image:
+        repo: 'borderless-gym/app'
+        tag: '${CIRCLE_SHA1}'
+      - aws-ecr/push-image:
+        repo: 'borderless-gym/nginx'
+        tag: '${CIRCLE_SHA1}''
 
 workflows:
   version: 2
