fix : 変数展開のエラー修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
   deploy:
     machine: true
     environment:
-      APP_ECR_URL: ${AWS_ECR_ACCOUNT_URL}/borderless-gym
+      APP_ECR_URL: "${AWS_ECR_ACCOUNT_URL}/borderless-gym"
     steps:
       - checkout
       - run:
