--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,8 +116,8 @@ jobs:
           name: build iamges
       - run:
         command: |
-          docker tag borderless-gym/app:latest ${APP_ECR_URL}/app:${CIRCLE_SHA1}
-          docker tag borderless-gym/nginx:latest ${APP_ECR_URL}/nginx:${CIRCLE_SHA1}
+          docker tag borderless-gym/app:latest "${APP_ECR_URL}/app:${CIRCLE_SHA1}"
+          docker tag borderless-gym/nginx:latest "${APP_ECR_URL}/nginx:${CIRCLE_SHA1}"
         name: set image tag
       - aws-ecr/push-image:
         repo: 'borderless-gym/app'
