--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
   deploy:
     machine: true
     environment:
-      APP_ECR_URL: "${AWS_ECR_ACCOUNT_URL}/borderless-gym"
+      # APP_ECR_URL: "${AWS_ECR_ACCOUNT_URL}/borderless-gym"
     steps:
       - checkout
       - run:
@@ -119,12 +119,12 @@ jobs:
             docker tag borderless-gym/app:latest "${APP_ECR_URL}/app:${CIRCLE_SHA1}"
             docker tag borderless-gym/nginx:latest "${APP_ECR_URL}/nginx:${CIRCLE_SHA1}"
           name: set image tag
-      - aws-ecr/push-image:
-          repo: "borderless-gym/app"
-          tag: "${CIRCLE_SHA1}"
-      - aws-ecr/push-image:
-          repo: "borderless-gym/nginx"
-          tag: "${CIRCLE_SHA1}"
+      # - aws-ecr/push-image:
+      #     repo: "borderless-gym/app"
+      #     tag: "${CIRCLE_SHA1}"
+      # - aws-ecr/push-image:
+      #     repo: "borderless-gym/nginx"
+      #     tag: "${CIRCLE_SHA1}"
 
 workflows:
   version: 2
