--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ workflows:
             - build
       - deploy-image:
           context: aws-eggsystem
-          # required:
+          # requires:
           #   - phpmd
           #   - phpunit
           # filters:
@@ -151,7 +151,7 @@ workflows:
           #     only: master
       - aws-ecs/deploy-service-update:
           context: aws-eggsystem
-          required:
+          requires:
             - deploy-image
           # filters:
           #     branches:
