fix : タイポの修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,7 +174,7 @@ workflows:
           requires:
             - build
       - build-test:
-          required:
+          requires:
             - build
       - deploy-image:
           context: aws-eggsystem
