--- a/src/composer.json
+++ b/src/composer.json
@@ -78,9 +78,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "post-install-cmd": "vendor/bin/cghooks add --no-lock",
-        "post-update-cmd": "vendor/bin/cghooks update",
+        "post-install-cmd": "[ $COMPOSER_DEV_MODE -eq 0 ] || vendor/bin/cghooks add --no-lock",
+        "post-update-cmd": "[ $COMPOSER_DEV_MODE -eq 0 ] || vendor/bin/cghooks update",
         "check-phpmd": "vendor/bin/phpmd ./ text phpmd.xml --suffixes php --exclude vendor/*,tests/*",
-        "fix-php-cs-fixer": "vendor/bin/php-cs-fixer fix --path-mode=intersection ./"
+        "fix-php-cs-fixer": "[ $COMPOSER_DEV_MODE -eq 0 ] || vendor/bin/php-cs-fixer fix --path-mode=intersection ./"
     }
 }
