fix : 依存関係の追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,6 +184,7 @@ workflows:
           requires:
             - phpmd
             - phpunit
+            - build-test
           filters:
             branches:
               only: master
