--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "storybook": "start-storybook --ci -p 9001",
-        "build-storybook": "build-storybook -s public -o ../dist"
+        "build-storybook": "build-storybook -s public -o ../docs"
     },
     "devDependencies": {
         "axios": "^0.19",
