--- a/src/package.json
+++ b/src/package.json
@@ -21,7 +21,6 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11",
-        "@storybook/vue": "^5.3.19"
+        "vue-template-compiler": "^2.6.11"
     }
 }
