--- a/src/package.json
+++ b/src/package.json
@@ -12,16 +12,25 @@
         "build-storybook": "build-storybook -s public -o ../docs"
     },
     "devDependencies": {
+        "@mdi/font": "^5.3.45",
         "@storybook/vue": "^5.3.19",
         "axios": "^0.19",
         "babel-preset-vue": "^2.0.2",
         "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
+        "fibers": "^5.0.0",
+        "install": "^0.13.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "npm": "^6.14.6",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.26.10",
+        "sass-loader": "^8.0.2",
         "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "vuetify-loader": "^1.5.0"
+    },
+    "dependencies": {
+        "vuetify": "^2.3.4"
     }
 }
