--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,9 @@ jobs:
           name: composer save cache
       - run:
           command: |
-            nvm install v12.18.2
+            export NVM_DIR="/opt/circleci/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            nvm install v12.18.2  
             npm install -g npm@latest
           name: update node environments
       - run:
