--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,8 @@ jobs:
           command: |
             export NVM_DIR="/opt/circleci/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            nvm install v12.18.2  
+            nvm install stable --latest-npm
+            nvm alias default stable
             npm install -g npm@latest
           name: update node environments
       - run:
