--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,8 +87,9 @@ jobs:
           command: npm --prefix src run production
           name: build node_modules
       - save_cache:
-          keys:
-            - assets-{{ checksum "src/public" }}
+          keys: assets-{{ checksum "src/public" }}
+          paths:
+            - src/public
           name: assets save cache
 
   building-test:
